--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <div class="menu-desc">
                         <div class="menu-desc-hd">SẢN PHẨM</div>
                         <p class="menu-desc-text white-text">Chúng tôi cung cấp các giải pháp toàn diện về phôi, chai, quai, nắp từ nhựa PET. Các bạn cứ lo sản phẩm cho tốt, việc chai lọ cứ để chúng tôi lo.</p>
+                        <iframe width="100%" height="456" src="https://www.youtube.com/embed/fvdRdFncvyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <a href="#contact" class="menu-desc-link">Khám Phá Ngay</a>
                 </div>    
                 
@@ -71,6 +72,17 @@
                         <div class="item-4">PHÔI 21.2GR PCO 1881</div>
                     </div>
                     <div class="item-5">PHÔI 90GR WATER NECK 46</div>
+                </div>
+                <div class="menu-3-col white-text">
+                    <div class="item-1-2">
+                        <div class="item-1">PHÔI 21GR PCO 1881</div>
+                        <div class="item-2">PHÔI 33GR OIL NECK 26</div>
+                    </div>
+                    <div class="item-3-4">
+                        <div class="item-3">PHÔI 42.7GR PCO 1881</div>
+                        <div class="item-4">PHÔI 43GR NECK 38</div>
+                    </div>
+                    <div class="item-5">PHÔI 95GR NECK 38</div>
                 </div>
             </div>
             <div id="news" class="client">
